# vector-graphics

./: CMakeLists.txt  README.md
include/GL/: freeglut_ext.h  freeglut_std.h
src/: Bola.h  Botao.h  Relogio.cpp  Relogio.h  Vector2.h  gl_canvas2d.cpp  gl_canvas2d.h  main.cpp
src/base/enums/: MouseButton.h  MouseState.h  Shape.h
src/base/interfaces/: IEntity.h  IIntersect.h  IMouse.h  IRender.h  IShape.h
src/base/objects/: Circle.cpp  Circle.h
src/base/vectors/: Vector2D.h
src/entities/: ActionButton.cpp  ActionButton.h  Button.cpp  Button.h  Toolbox.cpp  Toolbox.h
src/entities/shapes/: RegularShape.cpp  RegularShape.h  Triangle.cpp  Triangle.h
src/managers/: EntityManager.cpp  EntityManager.h  SceneManager.cpp  SceneManager.h
